<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    style="@style/BackgroundStyle">

    <TextView
        android:id="@+id/textview"
        android:layout_marginTop="32dp"
        android:text="@string/quizName"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        style="@style/LabelStyle" />

    <Button
        android:id="@+id/startButton"
        style="@style/ButtonStyle"
        android:layout_width="176dp"
        android:layout_height="76dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="116dp"
        android:text="@string/startButton"
        app:layout_constraintBottom_toTopOf="@+id/exButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <Button
        android:id="@+id/exButton"
        style="@style/ButtonStyle"
        android:layout_width="176dp"
        android:layout_height="76dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="116dp"
        android:text="@string/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

</androidx.constraintlayout.widget.ConstraintLayout>